--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>This is Jakkrapong Intamin</title>
+  <title>This is Astapon </title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="" id="home">
-    <h1>I'm Jakkrapong Intamin</h1>
+    <h1>I'm Astapon Anuchat</h1>
     <h2><u>S</u>tudent of <u>P</u>anyapiwat <u>I</u>nstitute of <u>M</u>anagement</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="">
     <img src="images/mountain.png" alt="">
