--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div class="skills" id="skills">
         <h2>My Skills</h2>
         <div class="skill-row">
+          <h3>God like Javascript Coding</h3>
         </div>
       </div>
       <hr>
