--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li><a href="#price_anchor">Price</a></li>
           <li><a href="#call_anchor">Call</a></li>
           <li><a href="#social_anchor">Social</a></li>
-          <li><a href="#social_anchor">Our Team</a></li>
+          <li><a href="../WebDevelopment2022/team-member.html">Our Team</a></li>
         </ul>
       </div>
       <span class="navTrigger">
@@ -53,19 +53,19 @@
         </div>
         <div class="row glow-blue">
           <div class="feature-box col-lg-4">
-            <i class="fa-solid fa-magnifying-glass fa-solid fa-7x"></i>
+            <i class="fa-solid fa-magnifying-glass fa-solid fa-7x icon"></i>
             <h3 class="feature-box-title">Discover</h3>
             <p>"เดินทางไกล? โชคลาภ? คุณไม่จำเป็นต้องมีก็เจอสุดยอดเครื่องประดับได้"</p>
             <p>ค้นพบเครื่องประดับที่ต้องการในชั่วมือเลื่อน</p>
           </div>
           <div class="feature-box col-lg-4">
-            <i class="fa-sharp fa-solid fa-handshake fa-solid fa-7x"></i>
+            <i class="fa-sharp fa-solid fa-handshake fa-solid fa-7x icon"></i>
             <h3 class="feature-box-title">Communicate</h3>
             <p>"ระยะห่าง? ไม่สามารถตกลงกันได้เพราะติดนัด? โดนซื้อตัดหน้า? ลืมไปได้เลย!"</p>
             <p>การติดต่อสามารถทำได้ทุกที ทุกเวลา สามารถเป็นเจ้าของอัญมณีที่หมายตาได้ในพริบตา</p>
           </div>
           <div class="feature-box col-lg-4">
-            <i class="fa-sharp fa-solid fa-scale-balanced fa-solid fa-7x"></i>
+            <i class="fa-sharp fa-solid fa-scale-balanced fa-solid fa-7x icon"></i>
             <h3 class="feature-box-title">Bargain</h3>
             <p>"แพงเกินไป? ไม่สมราคา? ต่อรอได้ทันที!"</p>
             <p>การต่อรองสามารถทำได้ เพียงพบตำหนิติดต่อทันที</p>
@@ -78,27 +78,27 @@
             <h1 class="glow-red feature-header anchor" id="test_anchor">Testimonial</h1>
           </div>
           <div class="feature-box col-lg-4">
-            <i class="fa-solid fa-person fa-7x"></i>
+            <i class="fa-solid fa-person fa-7x icon"></i>
             <p>"หน้าเว็ปมีความสวยค้นหาสินค้าได้ง่ายมากๆ"</p>
           </div>
           <div class="feature-box col-lg-4">
-            <i class="fa-solid fa-person fa-7x"></i>
+            <i class="fa-solid fa-person fa-7x icon"></i>
             <p>"ติดต่อกับผู้ชายสินค้าได้สบาย"</p>
           </div>
           <div class="feature-box col-lg-4">
-            <i class="fa-solid fa-person fa-7x"></i>
+            <i class="fa-solid fa-person fa-7x icon"></i>
             <p>"สินค้าตรงปกไม่จกตา"</p>
           </div>
           <div class="feature-box col-lg-4">
-            <i class="fa-solid fa-person-dress fa-7x"></i>
+            <i class="fa-solid fa-person-dress fa-7x icon"></i>
             <p>"แอดมินตอบไวมากๆ"</p>
           </div>
           <div class="feature-box col-lg-4">
-            <i class="fa-solid fa-person-dress fa-7x"></i>
+            <i class="fa-solid fa-person-dress fa-7x icon"></i>
             <p>"ได้รับสินค้าแล้วตรงปกจากรูปภาพมาก"</p>
           </div>
           <div class="feature-box col-lg-4">
-            <i class="fa-solid fa-person-dress fa-7x"></i>
+            <i class="fa-solid fa-person-dress fa-7x icon"></i>
             <p>"สวยทุกอันเลยยย"</p>
           </div>
         </div>
