--- a/team-member.html
+++ b/team-member.html
@@ -154,7 +154,7 @@
           <div class="container ">
             <tr>
               <td>
-                <a href="">
+                <a href="https://suravee1999.github.io/resume/">
                   <img src="images/member7.jpg" alt="member7" class="image">
                 </a>
               </td>
