--- a/team-member.html
+++ b/team-member.html
@@ -186,7 +186,7 @@
           <div class="container ">
             <tr>
               <td>
-                <a href="https://github.com/pompamchan/resume/index.html">
+                <a href="https://pompamchan.github.io/resume/?fbclid=IwAR1HqvVXMm-6bi9J6ow_0KUG1hC-2KdLktOc54ivInIJCR1GqqiNmJ0c0UI">
                   <img src="images/member9.jpg" alt="member9" class="image">
                 </a>
               </td>
