--- a/team-member.html
+++ b/team-member.html
@@ -52,7 +52,7 @@
     <p class="glow-gb">มาทำความรู้จักกับพนักงานในบริษัทของเรา</p>
     <section id="Page">
       <div class="row">
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-8">
           <div class="container">
             <tr>
               <td>
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-8">
           <div class="container ">
             <tr>
               <td>
@@ -86,7 +86,7 @@
             <h4 class="member">Coordinator</h4>
           </div>
         </div>
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-8">
           <div class="container ">
             <tr>
               <td>
@@ -102,7 +102,7 @@
             <h4 class="member">Member</h4>
           </div>
         </div>
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-8">
           <div class="container ">
             <tr>
               <td>
@@ -118,7 +118,7 @@
             <h4 class="member">Member</h4>
           </div>
         </div>
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-8">
           <div class="container ">
             <tr>
               <td>
@@ -134,7 +134,7 @@
             <h4 class="member">Member</h4>
           </div>
         </div>
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-8">
           <div class="container ">
             <tr>
               <td>
@@ -150,7 +150,7 @@
             <h4 class="member">Member</h4>
           </div>
         </div>
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-84">
           <div class="container ">
             <tr>
               <td>
@@ -166,7 +166,7 @@
             <h4 class="member">Member</h4>
           </div>
         </div>
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-8">
           <div class="container ">
             <tr>
               <td>
@@ -182,7 +182,7 @@
             <h4 class="member">Member</h4>
           </div>
         </div>
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-8">
           <div class="container ">
             <tr>
               <td>
@@ -198,7 +198,7 @@
             <h4 class="member">Member</h4>
           </div>
         </div>
-        <div class="Page-box col-lg-4">
+        <div class="Page-box col-lg-4 col-md-6 col-sm-8">
           <div class="container">
             <tr>
               <td>
